2012-06-29 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: Removed top download  hidden record.

2012-06-21 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: datastore pagination don't keep search params
	
2012-06-04 Tsi YANG <tsi@in-cite.net>
	* Feature: Implemented TCA FE Admin getRecord hook.
	* Feature: Added Typoscript configuration to render files list view from dataset single view.

2012-05-31 Tsi YANG <tsi@in-cite.net>
	* Refactor: Reworked hook condition.
	* Feature: Implemented partial hook to render list files on dataset single view.

2012-05-25 Tsi YANG <tsi@in-cite.net>
	* Feature: Implemented TCA FE Admin hook process befiore init plugin.
	* Feature: Implemented TCA FE Admin hook to process tx_icsoddatastore_files field md5.

2012-05-24 Tsi YANG <tsi@in-cite.net>
	* Fix: Updated from TCA FE Admin.
	* Update: Adjusted hook code because refactor ics_tcafe_admin.
	* Bug: Updated hook on file.
	* Feature: Implemented hook file deleteRecord.

2012-05-22 Tsi YANG <tsi@in-cite.net>
	* Feature: Adpated template for field entry.
	* Fearure: Added configuration to file upload folder.
	* Feature: Implemented hook on process_valueToDB.
	* Feature: Adjusted hook declaration on controlEntry.

2012-05-21 Tsi YANG <tsi@in-cite.net>
	* Fix: Omitted condition on use TCA FE Admin .
	* Feature: Implemented form view switch record type.
	* Feature: Added typoscript configuration on tx_icsoddatastore_files fields.

2012-05-15 Tsi YANG <tsi@in-cite.net>
	* Comments : Added TODO on hook
	* Feature: Partial implementation of hook on TCA FE Admin for table tx_icsoddatastore_files field file.

2012-05-14 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: Initialize renderEmpty function to tx_icsoddatastore_pi3 class

2012-05-03 Tsi YANG <tsi@in-cite.net>
	* Feature: Added datastore filemount.
	* Refactor: Added TCA field files on filegroup.
	
2012-04-25 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Add pagebrowse dependency
	* Version changed to 1.1.3
